<resources>
    <string name="txtNext">Next</string>

    //Screen One
    <string name="app_name">RestaurantReservations</string>
    <string name="choice_one">Chicago Style Pizza</string>
    <string name="choice_two">Classic Burger Joint</string>
    <string name="check_box">Select</string>
    <string name="next_screen">Next</string>
    <string name="choice">select</string>

    //Screen Two
    <string name="FirstName"></string>
    <string name="LastName">Last Name</string>
    <string name="Phone">Phone Number</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="txt_Date">Date of Reservation</string>

    <string-array name="Month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string name="available_times">Choose from the available times</string>
    <string-array name="Times">
        <item>4:00 PM</item>
        <item>4:30 PM</item>
        <item>6:00 PM</item>
        <item>8:00 PM</item>
    </string-array>

    <string name="txtDay">Day</string>
    <string name="txtYear">Year</string>
    <string name="cert">Certificate</string>
    <string name="twoYr">Associates Degree</string>
    <string name="txtMajor">Major</string>

    <string-array name="lstCertificate">
        <item>Android Certificate</item>
        <item>iOS Mobile Certificate</item>
    </string-array>
    <string-array name="lstMajor">
        <item>Digital Media</item>
        <item>Mobile Application Development</item>
        <item>Web Development</item>
    </string-array>


    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="LoginHint">Enter a user name</string>
    <string name="LoginButtonText">Login</string>
    <string name="errMessageLogin">Invalid Login. Please retry.</string>
    <string name="errMessagePassword">Invalid Password. Please retry.</string>


</resources>
