<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jjuarez.restaurantreservations.activity_information">

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/next_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_first_name"
        android:inputType="textPersonName"
        android:text="@string/FirstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/txtFirstName"
        app:layout_constraintStart_toStartOf="@+id/txtFirstName"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstName" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_phone_number"
        android:inputType="textPersonName|phone"
        app:layout_constraintEnd_toEndOf="@+id/txtLastName"
        app:layout_constraintStart_toStartOf="@+id/txtLastName"
        app:layout_constraintTop_toBottomOf="@+id/txtLastName" />

    <EditText
        android:id="@+id/txtDay"
        android:layout_width="62dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/txtDay"
        android:inputType="number"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="@+id/spnMonth"
        app:layout_constraintStart_toEndOf="@+id/spnMonth"
        app:layout_constraintTop_toTopOf="@+id/spnMonth"
        app:layout_constraintVertical_bias="0.583" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="84dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_Date"
        android:textAlignment="viewEnd"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txtPhone"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

    <Spinner
        android:id="@+id/spnMonth"
        android:layout_width="91dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:entries="@array/Month"
        app:layout_constraintBottom_toBottomOf="@+id/txtDate"
        app:layout_constraintStart_toEndOf="@+id/txtDate"
        app:layout_constraintTop_toTopOf="@+id/txtDate" />

    <Spinner
        android:id="@+id/spnTime"
        android:layout_width="106dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:entries="@array/Times"
        android:spinnerMode="dialog"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/available_times"
        app:layout_constraintStart_toStartOf="@+id/txtDate"
        app:layout_constraintTop_toBottomOf="@+id/txtDate" />


</android.support.constraint.ConstraintLayout>
