<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jjuarez.restaurantreservations.MainActivity">

    <TextView
        android:id="@+id/choiceTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="216dp"
        android:text="@string/choice_two"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choiceOne" />

    <TextView
        android:id="@+id/choiceOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/choice_one"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/next_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioButton
        android:id="@+id/inputOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/choiceOne"
        app:layout_constraintStart_toEndOf="@+id/choiceOne"
        app:layout_constraintTop_toTopOf="@+id/choiceOne"
        app:layout_constraintVertical_bias="0.0" />

    <RadioButton
        android:id="@+id/inputTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/choiceTwo"
        app:layout_constraintStart_toEndOf="@+id/choiceTwo"
        app:layout_constraintTop_toTopOf="@+id/choiceTwo"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="312dp"
        android:layout_height="200dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/choice_two"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choiceTwo"
        app:srcCompat="@drawable/classic_burger" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choiceOne"
        app:srcCompat="@drawable/pizza_new" />

</android.support.constraint.ConstraintLayout>
